[package]
name = "audio_analysis_tool"
version = "0.1.0"
edition = "2018"

[dependencies]
audrey = "0.3"
rustfft = "5.1"
plotters = "0.3"
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.23"
show-image = "0.14"


[features]
default = []
android = []

[lib]
name = "audio_analysis_tool"
path = "src/lib.rs"

[[bin]]
name = "audio_analysis_tool_bin"
path = "src/main.rs"
